voidauth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: voidauth
  namespace: voidauth
  labels:
    app: voidauth
spec:
  type: ClusterIP
  selector:
    app: voidauth
  ports:
    - name: http
      port: 3000
      targetPort: 3000
