voidauth/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voidauth
  namespace: voidauth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth.apps.k8s.enros.me
      secretName: voidauth-tls
  rules:
    - host: auth.apps.k8s.enros.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voidauth
                port:
                  number: 3000
